<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.divyapatel.practise_1.MainActivity"
    android:orientation="vertical">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:src="@drawable/sign_up_2"
        android:scaleType="fitXY"
        android:background="#000080"
        android:padding="2dp"
        android:id="@+id/image"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="vertical"
        android:layout_gravity="center">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:hint="@string/User_name"
            android:textSize="20dp"
            android:gravity="center"
            android:textStyle="bold"
            android:layout_margin="5dp"
            android:textColor="#8E44AD"
            android:background="#D6EAF8"
            android:id="@+id/nameEt"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:hint="@string/number"
            android:textSize="20dp"
            android:gravity="center"
            android:textStyle="bold"
            android:layout_margin="5dp"
            android:textColor="#8E44AD"
            android:background="#D6EAF8"
            android:id="@+id/numberEt"
            android:inputType="number"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:hint="@string/email"
            android:textSize="20dp"
            android:gravity="center"
            android:textStyle="bold"
            android:layout_margin="5dp"
            android:textColor="#8E44AD"
            android:background="#D6EAF8"
            android:id="@+id/emailEt"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:hint="@string/password"
            android:textSize="20dp"
            android:gravity="center"
            android:textStyle="bold"
            android:layout_margin="5dp"
            android:textColor="#8E44AD"
            android:inputType="textPassword"
            android:background="#D6EAF8"
            android:id="@+id/passwordEt"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:hint="@string/confirm_password"
            android:textSize="20dp"
            android:gravity="center"
            android:textStyle="bold"
            android:layout_margin="5dp"
            android:textColor="#8E44AD"
            android:inputType="textPassword"
            android:background="#D6EAF8"
            android:id="@+id/confirmpassEt"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:layout_marginBottom="10dp">
            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/button_1"
                android:textSize="20dp"
                android:layout_weight="1"
                android:id="@+id/quitBtn"
                />
            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/button_2"
                android:textSize="20dp"
                android:layout_weight="1"
                android:id="@+id/submitBtn"
                />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>